# knowledge-assistant-confluence-obsidian

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  main.py
src/agents/: confluence_agent.py  obsidian_agent.py  supervisor_agent.py  supervisor_graph.py
src/config/: settings.py
src/logger/: logger.py
src/prompts/: confluence_agent_prompt.md  obsidian_agent_prompt.md  supervisor_agent_prompt.md
src/utils/: llm_retry.py
