[project]
name = "lab2"
version = "0.1.0"
description = "Multi-agent knowledge assistant with Confluence and Obsidian"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.0.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]
